--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>eStartup Bootstrap Template - Index</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title> Best Social Media and SEO (Google Ranking) Agencies in Kuwait - SWANNETWORKING </title>
+  <meta content="We are Best Social Media and Digital marketing Agencies in Kuwait " name="description">
+  <meta content="Digital marketing agency Kuwait, Social media agency Kuwait, SEO, Web Design" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -54,23 +54,6 @@
           <li><a class="nav-link scrollto" href="#screenshots">Screenshots</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -82,14 +65,14 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Welcome to eStartup</h1>
-      <h2>Elegant Bootstrap Template for Startups, Apps &amp; more...</h2>
+      <h1>Welcome to Swannetwork</h1>
+      <h2>We are doing Digital Marketing, Social Media Marketing and Google Ranking &amp; more...</h2>
       <img src="assets/img/hero-img.png" alt="Hero Imgs" data-aos="zoom-out" data-aos-delay="100">
       <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
       <div class="btns">
-        <a href="#"><i class="fa fa-apple fa-3x"></i> App Store</a>
-        <a href="#"><i class="fa fa-play fa-3x"></i> Google Play</a>
-        <a href="#"><i class="fa fa-windows fa-3x"></i> windows</a>
+        <a href="#"><i class="fa fa-apple fa-3x"></i> Digital Marketing</a>
+        <a href="#"><i class="fa fa-play fa-3x"></i> SEO </a>
+        <a href="#"><i class="fa fa-windows fa-3x"></i> Web Design</a>
       </div>
     </div>
   </section><!-- End Hero Section -->
@@ -620,7 +603,7 @@
             <div class="info">
               <div>
                 <i class="bi bi-geo-alt"></i>
-                <p>A108 Adam Street<br>New York, NY 535022</p>
+                <p>5/123,MEL STREET<br>SALEM,TAMILNADU IN 636204</p>
               </div>
 
               <div class="email">
@@ -630,7 +613,7 @@
 
               <div>
                 <i class="bi bi-phone"></i>
-                <p>+1 5589 55488 55s</p>
+                <p>+91 9688223555</p>
               </div>
             </div>
 
@@ -681,7 +664,7 @@
         <div class="col-md-12 col-lg-4">
           <div class="footer-logo">
 
-            <a class="navbar-brand" href="#">eStartup</a>
+            <a class="navbar-brand" href="#">SWANNETWORKS</a>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the.</p>
 
           </div>
@@ -752,15 +735,8 @@
 
     <div class="copyrights">
       <div class="container">
-        <p>&copy; Copyrights eStartup. All rights reserved.</p>
-        <div class="credits">
-          <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eStartup
-        -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <p>&copy; Copyrights SWANNETWORKS. All rights reserved.</p>
+          Designed by <a href="https://www.urlhosting.in/">URL HOSTING</a>
         </div>
       </div>
     </div>
