--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <div class="feature-block">
 
               <img src="assets/img/svg/cloud.svg" alt="img">
-              <h4>introducing whatsapp</h4>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+              <h4>Digital Marketing</h4>
+              <p>We are doing all type of Digital Marketing Work</p>
               <a href="#">read more</a>
 
             </div>
@@ -109,8 +109,8 @@
             <div class="feature-block">
 
               <img src="assets/img/svg/planet.svg" alt="img">
-              <h4>user friendly interface</h4>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+              <h4>Google Ranking (SEO)</h4>
+              <p>We are all type bussiness website doing Google Ranking</p>
               <a href="#">read more</a>
 
             </div>
@@ -120,8 +120,8 @@
             <div class="feature-block">
 
               <img src="assets/img/svg/asteroid.svg" alt="img">
-              <h4>build the app everyone love</h4>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+              <h4>Web Design</h4>
+              <p>We are doing Static and Dynamic website </p>
               <a href="#">read more</a>
 
             </div>
