update about section

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title text-center">
 
-          <h2>simple systeme fordiscount </h2>
-          <p class="separator">Integer cursus bibendum augue ac cursus .</p>
+          <h2>Digital Marketing Agency Service </h2>
+          <p class="separator">Digital Marketing | Search Engine Optimization | PPC Management</p>
 
         </div>
       </div>
@@ -144,16 +144,17 @@
           <div class="col-md-7 col-lg-5">
             <div class="about-content" data-aos="fade-left" data-aos-delay="100">
 
-              <h2><span>eStartup</span>UI Design Mobile </h2>
-              <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
-              </p>
+              <h2><span>SWANNETWORKS</span>Digital Marketing</h2>
+              <p>Through our organization, we provide a broad range of services on the digital Platform. Our major emphasis is E-Commercial marketing, 
+                and we are providing services to assist clients in expanding their business. 
+                The services that our company provides are listed below.</p>
 
               <ul class="list-unstyled">
-                <li><i class="vi bi-chevron-right"></i>Creative Design</li>
-                <li><i class="vi bi-chevron-right"></i>Retina Ready</li>
-                <li><i class="vi bi-chevron-right"></i>Easy to Use</li>
-                <li><i class="vi bi-chevron-right"></i>Unlimited Features</li>
-                <li><i class="vi bi-chevron-right"></i>Unlimited Features</li>
+                 <li><i class="vi bi-chevron-right"></i>Dynamic and Static Website </li>
+                <li><i class="vi bi-chevron-right"></i>Search Engine Optimization</li>
+                <li><i class="vi bi-chevron-right"></i>Social Media Marketing</li>
+                <li><i class="vi bi-chevron-right"></i>Social Media Management</li>
+                <li><i class="vi bi-chevron-right"></i>Email Marketing</li>
               </ul>
 
             </div>
