--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title text-center">
           <h2>Contact</h2>
-          <p class="separator">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+          <p class="separator">Fill out the fields below and we will contact you within 24 hours</p>
         </div>
 
         <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
